# DTO

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: static.yml
dto-frontend/: build.mjs  index.html  modules.d.ts
dto-frontend/js/: main.bundle.css  main.bundle.js  main.js
dto-frontend/src/: App.tsx  context-menu.ts  editor.ts  main.tsx  old.ts  shared-types.ts
dto-frontend/src/nodes/: NodeA.tsx  NodeB.tsx  StyledNode.tsx
dto-frontend/src/schema/: component.json  data_schema.json  implementation_schema.json
dtocomponent/component/: __init__.py  component.py
dtocomponent/graph/: neo4j_connector.py
example/banking/: README.md  onboarding_components.CYPHER
example/dto-frontend/: index.html
example/dto-frontend/js/: main.js
example/simple/: pipeline_example.py
example/simple/pipeline/: example_pipeline_setter.py  (+2 more)
src/DTOComponent/: component.py
src/component/: component.py
src/component_sdk/: component.py
src/graph/: __init__.py  neo4j_connector.py
src/microservices_sdk/: __init__.py  implementation.py  infrastructure.py  microservice.py  microserviceSDK.py  specification.py
src/pipeline-sdk/: __init__.py  infrastructure.py  pipelineSDK.py
src/pipeline_sdk/: __init__.py  implementation.py  infrastructure.py  pipeline.py  specification.py
src/schemas/: pipeline_implmentation_schema.json  pipeline_infrastructure_schema.json  pipeline_metadata_schema.json
src/sdk/: componentSDK.py
src/tests/: test_component.py
src/thỉdparty_sdk/: __init__.py  thirdparty.py
tests/: test_component.py
(+14 files in other folders)
